[feature/feature_footeralign_and_modify_zth] Fixed mobile design

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1126,7 +1126,7 @@ textarea {
   }
 
   .text-list {
-    font-size: 2.031vw !important;
+    font-size: 2.331vw !important;
   }
 
   .align-att {
@@ -1162,7 +1162,7 @@ textarea {
   .profile-link {
     margin-right: 10.306vw;
     color: #ffffff;
-    font-size: 1.250vw;
+    font-size: 1.8vw;
   }
 
   .sideprofile-img {
